--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.11.0",
     "expo": "~39.0.3",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -29,7 +30,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.14.5",
-    "react-native-webview": "^10.10.0",
+    "react-native-webview": "~10.7.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
