feat(categoryOverview): create the category overview screen (#15)
* refactor: simplify and outsource some code fragments
  - For this I gave the category model a more meaningful name.
  - Also I create a new Button component with our own styles.
  - In the theme file I do not set paddings. So scroll views can set up to the edges.
* feat(categoryScreen): add the screen
  This commit includes the needed functionality and stylings.
  TODO: Lazy loading and infinite scroll to gather ALL posts (see #14)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "android": "expo start --android",
+    "dev": "expo start",
     "eject": "expo eject",
     "ios": "expo start --ios",
     "start": "expo start",
@@ -14,34 +15,37 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.8.0",
-    "@react-navigation/stack": "^5.10.0",
-    "expo": "~39.0.2",
+    "@react-navigation/native": "^5.8.1",
+    "@react-navigation/stack": "^5.11.0",
+    "expo": "~39.0.3",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "~1.13.1",
+    "react-native-render-html": "^4.2.4",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.1",
+    "react-native-web": "~0.14.5",
+    "react-native-webview": "~10.7.0",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "~7.12.3",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@types/react-native": "~0.63.30",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^7.12.0",
-    "eslint-plugin-jsx-a11y": "^6.4.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.1.2",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.7"
   }
 }
