--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.1",
+    "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^4.2.4",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.14.5",
-    "react-native-webview": "~10.7.0",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
@@ -38,7 +38,7 @@
     "@babel/core": "~7.12.3",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.30",
+    "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -46,6 +46,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.1.2",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.2"
   }
 }
