--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
+    "project": "./tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
     }
@@ -13,19 +14,25 @@
       "version": "detect"
     }
   },
+  "plugins": ["@typescript-eslint", "react", "prettier"],
   "extends": [
-    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "prettier/react",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:prettier/recommended"
   ],
   "rules": {
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "react/react-in-jsx-scope": "off",
-    "space-before-function-paren": [
-      "error",
-      { "anonymous": "always", "named": "never", "asyncArrow": "always" }
-    ]
+    // "react/react-in-jsx-scope": "off",
+    // "space-before-function-paren": [
+    //   "error",
+    //   { "anonymous": "always", "named": "never", "asyncArrow": "always" }
+    // ],
+
+    "import/no-unresolved": 0,
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+    "react/prop-types": 0,
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"]
   }
 }
