--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
+      "@__mocks__/*": ["./__mocks__/*"],
       "@assets/*": ["./assets/*"],
       "@components/*": ["./components/*"],
       "@models/*": ["./models/*"],
