--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "entryPoint": "./src/App.tsx",
     "name": "convention-app",
     "slug": "convention-app",
     "version": "1.0.0",
