ci: add tests and CI functionalities (#21)
* chore(deps): update dependencies to the latest expo
* ci: add eslint, jest and semantic releases
  All of them have only a preparation of the first settings.
* test: add a first jest testing and codecov
* test: add first tests
* test: add the tests for all the components
  TODO: Test for navigation and screens (here are problems with the fetch api).
* refactor: restructure the whole repository
  Store the app files inside a src folder and move some settings files to a config folder.

--- a/package.json
+++ b/package.json
@@ -3,15 +3,43 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "android": "expo start --android",
+    "commit": "git-cz",
     "dev": "expo start",
     "eject": "expo eject",
     "ios": "expo start --ios",
+    "lint": "yarn run eslint '**/*.{js,ts,tsx}' --quiet --fix",
+    "semantic-release": "semantic-release",
     "start": "expo start",
     "test": "jest",
+    "test:cov": "jest --coverage",
+    "test:watch": "jest --watch -u",
     "web": "expo start --web"
   },
-  "jest": {
-    "preset": "react-native"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "**/*.{js,ts,jsx,tsx}": [
+      "yarn lint",
+      "yarn test:cov --passWithNoTests"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "prettier": "./config/.prettierrc.json",
+  "eslintConfig": {
+    "extends": "./config/.eslintrc.json"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -22,30 +50,51 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.1",
+    "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^4.2.4",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.14.5",
-    "react-native-webview": "~10.7.0",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.12.3",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-native": "^7.1.0",
+    "@types/jest": "^26.0.15",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.30",
+    "@types/react-native": "~0.63.2",
+    "@types/react-test-renderer": "^16.9.3",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "commitizen": "^4.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
+    "jest-expo": "^39.0.0",
+    "jest-fetch-mock": "^3.0.3",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
-    "typescript": "~3.9.7"
+    "react-test-renderer": "^17.0.1",
+    "typescript": "~3.9.2"
+  },
+  "publishConfig": {
+    "access": "restricted"
+  },
+  "release": {
+    "extends": "./config/release.config.js"
   }
 }
