chore(misc): small improvements on several parts
* update subdependencies
* add codecov badge to the readme
* fix naming of the release action workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Frontend
+name: Release
 
 on:
   push:
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Release Frontend
+      - name: Release
         env:
           CI: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
