refactor(api): improve the api parameter call

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# macOS
+.DS_Store
+
+# DeepCode
+.dccache
+
 # expo
 node_modules/**/*
 .expo/
@@ -10,8 +16,5 @@ npm-debug.*
 *.orig.*
 web-build/
 
-# macOS
-.DS_Store
-
 # testing
-/coverage
+coverage
