ci(sematic-release): add the release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,8 @@ name: Release CI
 
 on:
   push:
-    branches-ignore:
-      - '**'
-    # branches:
-    #   - main
+    branches:
+      - main
 
 jobs:
   release:
