ci(semantic-release): fix the path of the config file

--- a/package.json
+++ b/package.json
@@ -102,6 +102,6 @@
     "access": "restricted"
   },
   "release": {
-    "extends": "./config/release.config.js"
+    "extends": "./config/.releaserc.json"
   }
 }
