--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
+# macOS
+.DS_Store
+
+# DeepCode
+.dccache
+
 # expo
 node_modules/**/*
 .expo/
-npm-debug.*
+.expo-creds/
+pc-api-*.json
 *.jks
 *.p8
 *.p12
@@ -9,9 +16,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-
-# macOS
-.DS_Store
+npm-debug.*
 
 # testing
-/coverage
+coverage
