--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@babel/core": "~7.12.3",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@testing-library/jest-native": "^3.4.3",
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.15",
@@ -96,6 +98,7 @@
     "lint-staged": "^10.5.1",
     "prettier": "^2.2.0",
     "react-test-renderer": "^17.0.1",
+    "semantic-release": "^17.3.0",
     "typescript": "~3.9.2"
   },
   "publishConfig": {
