--- a/config/.releaserc.json
+++ b/config/.releaserc.json
@@ -6,25 +6,12 @@
       "prerelease": true
     }
   ],
-  "repositoryUrl": "https://github.com/100herz/convention-app",
-  "debug": "true",
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
     "@semantic-release/npm",
     "@semantic-release/github",
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["CHANGELOG.md"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ]
+    "@semantic-release/git"
   ]
 }
