build: add the target as archive for iOS builds

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "android": "expo start --android",
     "build:android": "expo build:android -t app-bundle",
-    "build:ios": "expo build:ios",
+    "build:ios": "expo build:ios -t archive",
     "commit": "git-cz",
     "dev": "expo start",
     "eject": "expo eject",
