--- a/package.json
+++ b/package.json
@@ -49,11 +49,15 @@
     "extends": "./config/.eslintrc.json"
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "^0.1.0",
+    "@expo-google-fonts/vollkorn": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.4",
     "@react-navigation/native": "^5.8.1",
     "@react-navigation/stack": "^5.11.0",
     "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
