--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "android": "expo start --android",
     "build:android": "expo build:android -t app-bundle",
-    "build:ios": "expo build:ios",
+    "build:ios": "expo build:ios -t archive",
     "commit": "git-cz",
     "dev": "expo start",
     "eject": "expo eject",
@@ -49,60 +49,64 @@
     "extends": "./config/.eslintrc.json"
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "^0.1.0",
+    "@expo-google-fonts/vollkorn": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.10.4",
+    "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/native": "^5.8.1",
-    "@react-navigation/stack": "^5.11.0",
-    "expo": "~39.0.3",
-    "expo-status-bar": "~1.0.2",
+    "@react-navigation/stack": "^5.13.0",
+    "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
+    "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "^4.2.4",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.7",
-    "react-native-webview": "10.7.0",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.3",
+    "@babel/core": "~7.9.0",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@testing-library/jest-native": "^3.4.3",
     "@testing-library/react-native": "^7.1.0",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-test-renderer": "^16.9.4",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "commitizen": "^4.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.0",
-    "jest-expo": "^39.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": "^4.3.8",
+    "jest-expo": "^40.0.0",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.2.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
-    "semantic-release": "^17.3.0",
-    "typescript": "~3.9.2"
+    "semantic-release": "^17.3.6",
+    "typescript": "~4.0.0"
   },
   "publishConfig": {
     "access": "restricted"
